--- a/default.conf
+++ b/default.conf
@@ -1,9 +1,12 @@
 server {
-  listen *:80;
+  listen 80;
   location / {
     proxy_set_header Host www.yr.no;
-    proxy_set_header "User-Agent" "Yr-Cache-with-nginx-and-varnish";
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_pass https://www.yr.no;
+    proxy_set_header "User-Agent" "docker-nginx-proxy-pass";
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+
+    # Need this for SSL not to fail on certain hosts: https://stackoverflow.com/questions/38375588/nginx-reverse-proxy-to-heroku-fails-ssl-handshake
+    proxy_ssl_server_name on;
   }
 }
